# Dataset_builder_MEL

./: .code_instructions  .gitignore  README.md  oar.sh  oar_eval.sh  pyproject.toml  split_viewer.html
annotation/: Analyse_annotations_MEl1.ipynb  analysis_mel1.ipynb  display.py  loading.py  plots.py  stats.py
annotation/annotation_analysis/: generate_report.py  html_report.py  loader.py  stats.py
annotation/annotation_analysis/Louis/: user_state.json
annotation/annotation_analysis/VS-2/: user_state.json
annotation/annotation_analysis/eraimond/: user_state.json
annotation/annotation_analysis/laurent.amsaleg/: user_state.json
annotation/output/: mon_rapport.html
annotation/output/thomas.derrien@irisa.fr/: user_state.json
annotation/state/: generate_report.py  html_report.py  stats.py
configs/: make_dataset.yaml
configs/eval/: qwen_contrasive_10_text.yaml  qwen_contrastive_10_text.yaml  qwen_ranking_10_text.yaml
configs/scrape/: config.yaml  default.yaml
configs/split_gen/: All_disamb_pages_V0.yaml  Edits_V1.yaml  Edits_V2.yaml  Eval_V1.yaml  Eval_V2.yaml  default.yaml  eval_v2.yaml
eval/: run_eval.py  utils.py
eval/models/: model.py  qwen.py  qwen3.py
eval/prompts/: contrastive.py  contrastive.yaml  free_choice.py  free_choice.yaml  ranking.yaml
fig_gen/: fig.tex  mention_wordcloud.py  plots.py  stats.py  stats_extended.py  utils.py
scripts/: make_dataset.py  mention_wordcloud.py  stats.py  stats_extended.py
split_gen/: category_stats.py  make_split.py  p_scrapping.py  view_split.py  wikidata_enrich.py
wikiambig/: __init__.py  checkpoint.py  cli.py  config.py  models.py  test_disam.py
wikiambig/api_clients/: __init__.py  commons.py  wikidata.py  wikipedia.py
wikiambig/pipeline/: __init__.py  s1_disam_index.py  s2_wikitext.py  s3_wikidata.py  s4_wikipedia.py  s4b_commons.py  s5_image_data.py  s6_visual_entity_data.py  s7_assemble.py  utils.py
